[gd_scene load_steps=22 format=2]

[ext_resource path="res://font/Awake.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://environment/Map.tscn" type="PackedScene" id=2]
[ext_resource path="res://ending/ending.gd" type="Script" id=3]
[ext_resource path="res://dialog/Dialogue.tscn" type="PackedScene" id=4]
[ext_resource path="res://characters/portraits/Overlord/Overlord_Sheet.png" type="Texture" id=5]
[ext_resource path="res://characters/portraits/Overlord/Tail_WithEffect.png" type="Texture" id=6]
[ext_resource path="res://ui/Check_Reports.png" type="Texture" id=7]
[ext_resource path="res://ui/Check_Reports_Hover.png" type="Texture" id=8]
[ext_resource path="res://ui/Check_Reports_Pressed.png" type="Texture" id=9]
[ext_resource path="res://music/Victory_Theme.ogg" type="AudioStream" id=10]
[ext_resource path="res://music/Failure_Ambience.ogg" type="AudioStream" id=11]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=2]
resource_name = "opening"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("RichTextLabel:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 4.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RichTextLabel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 108, 108 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 108, 0, 108, 108 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 216, 0, 108, 108 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 324, 0, 108, 108 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 432, 0, 108, 108 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 540, 0, 108, 108 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=10]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="Ending" type="Node2D"]
script = ExtResource( 3 )
failure_dialog_file = "res://Dialog/json/overlord_failure.json"
success_dialog_file = "res://Dialog/json/overlord_success.json"

[node name="Navigation2D" parent="." instance=ExtResource( 2 )]
position = Vector2( 232.087, 240.496 )
scale = Vector2( 0.5, 0.5 )

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 0.639216, 0.792157, 0.611765, 0.839216 )
margin_right = 1024.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 286.28
margin_top = 73.0701
margin_right = 736.28
margin_bottom = 473.07
rect_clip_content = false
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
visible_characters = 0
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/opening = SubResource( 2 )

[node name="Tail" type="AnimatedSprite" parent="."]
visible = false
position = Vector2( 134.35, 325.269 )
frames = SubResource( 9 )
frame = 3
playing = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 134.356, 316.892 )
texture = ExtResource( 5 )
hframes = 5
frame = 3

[node name="Dialogue" parent="." instance=ExtResource( 4 )]

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 429.931
margin_top = 521.755
margin_right = 581.931
margin_bottom = 561.755
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureButton"]
margin_left = 13.0208
margin_top = 9.48529
margin_right = 139.021
margin_bottom = 49.4853
custom_fonts/font = SubResource( 10 )
text = "Acknowledge"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VictorySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -10.0

[node name="FailureAmbiance" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
bus = "Music"
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
